[package]
name = "foodhut_backend_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
log = "0.4.22"
num-bigint = "0.4.6"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "chrono", "macros", "bigdecimal"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
ulid = "1.1.2"
validator = { version = "0.18.1", features = ["derive"] }
