[package]
name = "foodhut_backend_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-convert = "1.0.0"
async-trait = "0.1.81"
axum = "0.7.5"
axum_typed_multipart = "0.11.1"
base16ct = { version = "0.2.0", features = ["alloc"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
cloudinary = "0.4.0"
env_logger = "0.11.3"
log = "0.4.22"
num-bigint = "0.4.6"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["multipart"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha1 = "0.10.6"
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "chrono", "macros", "bigdecimal"] }
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
ulid = "1.1.2"
validator = { version = "0.18.1", features = ["derive"] }
